# svezia-onekeyco-supplier-portal

./: .gitignore  README.md  hooks.py  pyproject.toml  setup.py
.github/workflows/: press-notify.yml
doctype/bank_api_account/: bank_api_account.json
doctype/bank_api_config/: bank_api_config.json
doctype/transaction_fee/: transaction_fee.json
supplier_portal_app/: billing.py  hooks.py  modules.txt  pyproject.toml  setup.py  tasks.py
supplier_portal_app/bank_connector/: psd2_client.py
supplier_portal_app/doctype/fee_rule/: fee_rule.json
